# PAP

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Makefile  README.md  SECURITY.md  VERSION  pap_plugged (3).md
docs/: deployment-guide.md  evaluation-methodology.md  overview.md  ownership-transfer.md  pap-hooks-spec.md  references.md  service-registry.md
docs/rfc/: pap-rfc-001-rev2.1.md  pap-rfc-001-v1.0.md  pap-rfc-001.md
ops/: README.md
proto/: README.md  buf.yaml
proto/pap/v1/: pap.proto
proxy/: README.md
registry/: README.md
sdk/: README.md
sdk/examples/: README.md
sdk/examples/python/: heartbeat_metrics.py
sdk/examples/typescript/: heartbeat_metrics.ts
sdk/go/: README.md  go.mod
sdk/go/pap/: envelope.go
sdk/python/: README.md  pyproject.toml
sdk/python/pap/: __init__.py  envelope.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs
sdk/tests/: README.md
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/src/: index.ts
