[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pap-sdk"
version = "0.0.1"
description = "Python SDK for the Plugged.in Agent Protocol."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Plugged.in"}]
dependencies = []

[project.optional-dependencies]
dev = ["mypy>=1.5.0", "ruff>=0.1.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pap*"]
