[package]
name = "pap-sdk"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Rust SDK scaffolding for the Plugged.in Agent Protocol."
repository = "https://plugged.in/pap"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
time = { version = "0.3", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:time"]
